src/app/addevent/addevent.component.css
.req label:before {
    color: var(--cds-alias-status-danger);
    content: '* ';
    display:inline;
}
::ng-deep clr-modal .modal-header--accessible{
    padding: 0!important;
}
::ng-deep clr-modal form{
    padding: 0!important;
}
::ng-deep .combo-box clr-combobox .clr-combobox-wrapper{
    border-style: none;
    background-color: transparent;
    border-radius: 0;
    border-bottom: var(--cds-alias-object-border-width-100) solid var(--clr-forms-border-color);;
}
::ng-deep .combo-box clr-combobox .clr-combobox-wrapper:hover{
    background-color: transparent;
}

